// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RemoveModal /> DialogBody renders a confirmation button 1`] = `
<Button
  bsStyle="danger"
  icon="check"
  pullRight={false}
  tipPlacement="top"
>
  Confirm
</Button>
`;

exports[`<RemoveModal /> renders a ModalDialog component when [show=true] 1`] = `
<ModalDialog
  headerText="Remove undefined"
  label="Remove"
  modalStyle="danger"
  show={true}
>
  <Modal__DialogBody>
    <span>
      Are you sure you want to remove 
      <strong />
      ?
    </span>
  </Modal__DialogBody>
  <Modal__DialogFooter
    style={
      Object {
        "border": "none",
      }
    }
  >
    <Button
      bsStyle="danger"
      icon="check"
      pullRight={false}
      tipPlacement="top"
    >
      Confirm
    </Button>
  </Modal__DialogFooter>
</ModalDialog>
`;

exports[`<RemoveModal /> renders correctly 1`] = `
<ModalDialog
  headerText="Remove undefined"
  label="Remove"
  modalStyle="danger"
>
  <Modal__DialogBody>
    <span>
      Are you sure you want to remove 
      <strong />
      ?
    </span>
  </Modal__DialogBody>
  <Modal__DialogFooter
    style={
      Object {
        "border": "none",
      }
    }
  >
    <Button
      bsStyle="danger"
      icon="check"
      pullRight={false}
      tipPlacement="top"
    >
      Confirm
    </Button>
  </Modal__DialogFooter>
</ModalDialog>
`;
